--- a/Explore/Default/.Mapping1.DTEMPLATE.json
+++ b/Explore/Default/.Mapping1.DTEMPLATE.json
@@ -16,7 +16,7 @@
         "value" : "@1"
       } ],
       "additionalInfo" : {
-        "description" : "added a new description",
+        "description" : "",
         "contentType" : "JSON",
         "documentState" : "INVALID"
       }
